{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 55,
  "lineage": "12459cff-36fe-01fd-6dc2-cc1fdb2d8efb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bootstrap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:681956716679:instance/i-0a2514aefc835e88a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2514aefc835e88a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "traplanje",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088f6b537d40edd1f",
            "private_dns": "ip-10-0-40-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.40.36",
            "public_ip": "3.83.158.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2b4d17fc066217e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0caad7685dfafca9d",
            "tags": {
              "Name": "bootstrap"
            },
            "tags_all": {
              "Name": "bootstrap"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03172d81855a9fbdd"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.k8s-sg",
            "aws_subnet.k8s-subnet-1",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:internet-gateway/igw-01574ae71a5bc4243",
            "id": "igw-01574ae71a5bc4243",
            "owner_id": "681956716679",
            "tags": {
              "Name": "k8s-igw"
            },
            "tags_all": {
              "Name": "k8s-igw"
            },
            "vpc_id": "vpc-0c32293d7300d7ae1"
          },
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:route-table/rtb-0240372b851ba219b",
            "id": "rtb-0240372b851ba219b",
            "owner_id": "681956716679",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01574ae71a5bc4243",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-rtb"
            },
            "tags_all": {
              "Name": "k8s-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c32293d7300d7ae1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8s-igw",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-rtb-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed398630cf07fc67",
            "route_table_id": "rtb-0240372b851ba219b",
            "subnet_id": "subnet-0caad7685dfafca9d"
          },
          "dependencies": [
            "aws_internet_gateway.k8s-igw",
            "aws_route_table.k8s-route-table",
            "aws_subnet.k8s-subnet-1",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:security-group/sg-03172d81855a9fbdd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03172d81855a9fbdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "k8s-sg",
            "name_prefix": "",
            "owner_id": "681956716679",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c32293d7300d7ae1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:subnet/subnet-0caad7685dfafca9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caad7685dfafca9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "681956716679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-subnet-1"
            },
            "tags_all": {
              "Name": "k8s-subnet-1"
            },
            "vpc_id": "vpc-0c32293d7300d7ae1"
          },
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:vpc/vpc-0c32293d7300d7ae1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ade87cedd7e460c4",
            "default_route_table_id": "rtb-048806c9d2084c149",
            "default_security_group_id": "sg-01561c5bbda98333e",
            "dhcp_options_id": "dopt-04c497344c75b50df",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c32293d7300d7ae1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048806c9d2084c149",
            "owner_id": "681956716679",
            "tags": {
              "Name": "k8s-vpc"
            },
            "tags_all": {
              "Name": "k8s-vpc"
            }
          }
        }
      ]
    }
  ]
}